@@ -1,3 +1,12 @@
+Tue Jun 17 04:33:46 2003  Tim Janik  <timj@gtk.org>
+
+	* bsecategories.[hc]:
+	(categories_match): removed unneccessary value copying.
+	(bse_categories_match): match categories via predicate.
+
+	* bsecategories.proc: added bse-categories-match-method() to list
+	procedure categories by object.
+
 Mon Jun 16 20:55:48 2003  Tim Janik  <timj@gtk.org>
 
 	* bsemidisynth.c:
